<resources>
    <string name="app_name">Movies</string>
    <string name="title_list">Filmes</string>
    <string name="movie_title_list">Titulo</string>
    <string name="movie_details">Detalhes</string>
    <string name="popularity">Popularity</string>
    <string name="back_list">Voltar</string>
    <string name="generos">Gêneros: </string>
    <string name="view_details">Clique para mais detalhes</string>
    <string name="movie_icon">Icone Filme</string>
    <string name="button_login">Entrar</string>
    <string name="password">Senha</string>
    <string name="input_login">Login</string>
    <string name="alert_password">A senha deve ter, no mínimo, 6 dígitos</string>
    <string name="alert_username">O usuário deve estar em formato de email.</string>
    <string name="list_movies">Lista de Filmes</string>
    <string name="logout">Sair</string>
</resources>