<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/icon_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/movie_icon"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/title_login"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icon_movie"
        app:layout_constraintBottom_toBottomOf="@+id/input_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_login"
        android:inputType="textEmailAddress"
        android:hint="@string/input_login"
        android:autofillHints="@string/input_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/input_password"
        style="@style/inputsLogin"
        />

    <EditText
        android:id="@+id/input_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        app:layout_constraintTop_toTopOf="@+id/input_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/inputsLogin" />

    <Button
        android:id="@+id/button_login"
        android:text="@string/button_login"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_password"
        android:background="@color/backgroundColor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>