<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".DetailsMovieActivity">

    <TextView
        android:id="@+id/title_details"
        android:text="@string/movie_details"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        style="@style/textDetails" />

    <TextView
        android:id="@+id/title_movie"
        style="@style/textDetails"
        android:text="@string/movie_title_list"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_details"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/popularity_movie"
        style="@style/textDetails"
        android:text="@string/popularity"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_movie"
        app:layout_constraintVertical_bias="0.223" />

    <TextView
        android:id="@+id/genres_movie"
        style="@style/textDetails"
        android:text="@string/generos"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popularity_movie"
        app:layout_constraintVertical_bias="0.344" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>